[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
access-control = { path = "../access-control" }
domain = { path = "../domain" }
orchestration-runtime = { path = "../orchestration-runtime" }
plugin-framework = { path = "../plugin-framework" }
runtime-profile = { path = "../runtime-profile" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
runtime-core = { path = "../runtime-core" }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["pem"] }
flate2.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
